[package]
name = "krustlet-wasmdome"
version = "0.1.0"
authors = ["Matthew Fisher <matt.fisher@microsoft.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.7"
k8s-openapi = { version = "0.8", default-features = false, features = ["v1_17"] }
kube = { version = "0.35", default-features = false }
kubelet = { version = "0.4", features = ["cli"] }
log = "0.4"
oci-distribution = { version = "0.3", default-features = false }
rand = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempfile = "3.1"
tokio = { version = "0.2", features = ["fs", "macros"] }
wascc-codec = "0.7"
wascc-fs = { version = "0.1", features = ["static_plugin"] }
wascc-httpsrv = { version = "0.7", features = ["static_plugin"] }
wascc-logging = { version = "0.7", features = ["static_plugin"] }
wascc-host = { version = "0.10", features = ["lattice"] }
engine-provider = { git = "https://github.com/wascc/wasmdome" }

[features]
default = ["native-tls"]
native-tls = ["kube/native-tls", "kubelet/kube-native-tls", "oci-distribution/native-tls"]
